# SOCKit

./: .gitignore  README.md  SETUP.md  SOCK.opam  dune  dune-project  dune.md  llvm-setup-macos.sh  opam-package-versions.txt  proposal.md  setup.sh  versions.txt
_build/: .gitignore
calc/: README.md  ast.mli  calc.ml  dune
calc2/: README.md  build.sh
docs/: LRM.tex  SOCK.tex  proposal.tex
docs/proposal/: SOCK.tex
examples/: ast.mli  calc.ml  gcd.example  parser.mly  scanner.mll
examples/calc/: parser.mly  scanner.mll
examples/calc2/: Makefile  dune  lexer.mll
examples/hello/: dune
examples/listener/: listener.mli
hello/: README.md  dune  hello.ml
lib/: Makefile  README.md  argparse.ml  ast.ml  dune  interpreter.ml  lexer.mll  parser.mly  prettyprinter.ml  sast.ml  sock.ml  symboltable.ml
lib/ast/: ast.ml
lib/calc/: ast.mli  dune
lib/calc2/: dune
lib/core/: Makefile  ast.mli  dune  lexer.mll  parser.mly
lib/hello/: dune  hello.ml
lib/interpreter/: _dune  interpreter.ml
lib/listener/: dune  listener.ml  listener.mli
lib/parser/: dune  parser.mly
lib/sast/: sast.ml
lib/scanner/: dune
lib/scratch/: semant.ml  semantic_checker.ml  tmp.ml
lib/semant/: semant.ml
listener/: dune  listener.ml
scripts/: clean.sh  clean_build_artifacts.sh  nc.sh  setup.sh
src/: README.md  SOCK.ml  ast.ml  dune  lexer.mll  listener.ml  parser.mly  scanner.mll
src/ast/: ast.ml  dune
src/bytecode/: bytecode.ml  dune
src/codegen/: codegen.ml  dune
src/compiler/: compiler  compiler.ml  dune
src/execute/: dune  execute.ml
src/hello/: dune  hello.ml
src/interpreter/: dune  interpreter.ml
src/sast/: dune  sast.ml
src/semant/: dune  semant.ml
test/: README.md  dune  example.it  gcd.example  test_ast_parser_scanner.ml  test_eval.ml  test_hello.ml  test_main.ml  tokenstring.ml
test/etc/: test_main.ml
