(lang dune 3.13)

(name SOCKit)

(generate_opam_files true)

(source
 (github rdnajac/SOCKit))

(authors
  "Quentin Autry"
  "Quinn Booth"
  "Hakim El Ghazi"
  "Ryan Najac"
  "Misha Smirnov"
  "Stacey Yao"
  )

(maintainers
  "Quentin Autry"
  "Quinn Booth"
  "Hakim El Ghazi"
  "Ryan Najac"
  "Misha Smirnov"
  "Stacey Yao"
  )

(license LICENSE)

(documentation https://url/to/documentation)

(package
  (name SOCKit)
  (synopsis "Socket Oriented Concurrency Kit")
  (description "PLT Spring 2024 Team Programming Project")
  (depends ocaml dune)
  (tags
    (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
